Issue with text align in column is fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,10 @@ body {
   font-family: 'Nunito', sans-serif;
   color: white;
 }
+.row {
+  align-items: center;
+}
+
 #topLeftColumn h1{
   text-align: center;
   font-size: 4rem;
